--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 nav {
-  background-color: #5793fd;
+  background-color: #705118;
   color: #ffffff;
   height: 80px;
   padding: 10px;
@@ -153,7 +153,7 @@ button {
   cursor: pointer;
   font-size: 1rem;
   border-radius: 6px;
-  border: 1px solid #aaa;
+  border: 1px solid rgb(66, 146, 133);
   padding: 10px;
   background: linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
 }
@@ -355,7 +355,7 @@ form > button {
 
 #toast.success {
   background-color: hsl(94, 40%, 86%);
-  color: hsl(94, 90%, 16%);
+  color: hsl(95, 78%, 9%);
 }
 
 .prev-workout h3 {
